change the title

--- a/Bridge ML.ipynb
+++ b/Bridge ML.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data exploratory on 2015 World Teams Championship"
+    "# Basic Machine Learning on 2015 World Teams Championship"
    ]
   },
   {
